--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,22 @@ project(GLFontRenderer)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_library(GLFontRenderer SHARED library.cpp)
+set(GLFONTRENDERER_DEPENDENCY_DIRECTORY ${CMAKE_SOURCE_DIR}/dependencies)
+set(GLFONTRENDERER_INCLUDE_DIRECTORY ${GLFONTRENDERER_DEPENDENCY_DIRECTORY}/include)
+set(GLFONTRENDERER_LIBRARY_DIRECTORY ${GLFONTRENDERER_DEPENDENCY_DIRECTORY}/lib)
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
+
+set(GLFONTRENDERER_LIBRARIES ${GLFONTRENDERER_LIBRARY_DIRECTORY}/SDL2.lib
+        ${GLFONTRENDERER_LIBRARY_DIRECTORY}/SDL2main.lib
+        ${GLFONTRENDERER_LIBRARY_DIRECTORY}/freetype.lib
+        ${GLFONTRENDERER_LIBRARY_DIRECTORY}/glew32.lib)
+
+include_directories(${GLFONTRENDERER_INCLUDE_DIRECTORY})
+
+file(GLOB_RECURSE GLFONTRENDERER_SOURCE_FILES ${CMAKE_SOURCE_DIR}/src/*.c**)
+file(GLOB_RECURSE GLFONTRENDERER_HEADER_FILES ${CMAKE_SOURCE_DIR}/src/*.h**)
+
+#add_library(GLFontRenderer SHARED ${GLFONTRENDERER_SOURCE_FILES} ${GLFONTRENDERER_HEADER_FILES})
+add_executable(GLFontRenderer ${GLFONTRENDERER_SOURCE_FILES} ${GLFONTRENDERER_HEADER_FILES})
+target_link_libraries(GLFontRenderer ${GLFONTRENDERER_LIBRARIES})
