✨ changes by beastle9end

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,23 @@ set(GLFONTRENDERER_LIBRARY_DIRECTORY ${GLFONTRENDERER_DEPENDENCY_DIRECTORY}/lib)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 
-set(GLFONTRENDERER_LIBRARIES ${GLFONTRENDERER_LIBRARY_DIRECTORY}/SDL2.lib
-        ${GLFONTRENDERER_LIBRARY_DIRECTORY}/SDL2main.lib
-        ${GLFONTRENDERER_LIBRARY_DIRECTORY}/freetype.lib
-        ${GLFONTRENDERER_LIBRARY_DIRECTORY}/glew32.lib)
+if (WIN32)
+    set(GLFONTRENDERER_LIBRARIES ${GLFONTRENDERER_LIBRARY_DIRECTORY}/SDL2.lib
+            ${GLFONTRENDERER_LIBRARY_DIRECTORY}/SDL2main.lib
+            ${GLFONTRENDERER_LIBRARY_DIRECTORY}/freetype.lib
+            ${GLFONTRENDERER_LIBRARY_DIRECTORY}/glew32.lib
+            opengl32.lib)
+
+    list(APPEND GLFONTRENDERER_LIBRARIES ${GLFONTRENDERER_DEPENDENCY_DIRECTORY}/include_win32)
+else ()
+    find_package(SDL2 REQUIRED)
+    find_package(Freetype REQUIRED)
+    find_package(GLEW REQUIRED)
+
+    set(GLFONTRENDERER_LIBRARIES ${SDL2_LIBRARIES} ${FREETYPE_LIBRARIES} ${GLEW_LIBRARIES} -lGL)
+
+    include_directories(${SDL2_INCLUDE_DIRS} ${FREETYPE_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
+endif ()
 
 include_directories(${GLFONTRENDERER_INCLUDE_DIRECTORY})
 
